salesforce-main/src/main/default/objects/Log_Setting__c/fields/Debug__c.field-meta.xml
<CustomField>
    <fullName>Debug__c</fullName>
    <description>Used to specify the transport class for debug severity</description>
    <label>Debug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>