salesforce-main/src/main/default/objects/Log_Setting__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>Used to specify the transport class for Error logs</description>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>