salesforce-main/src/main/default/objects/Log_Setting__c/fields/Warn__c.field-meta.xml
<CustomField>
    <fullName>Warn__c</fullName>
    <description>Used to specify the transport class for Warning logs</description>
    <label>Warn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>